--- a/aboutme1/aboutme.html
+++ b/aboutme1/aboutme.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
-<h1 style="color:lightseagreen;">Azul Espinosa</h1>
-<h3>I'm Argentinian-American from Boulder, Colorado, USA</h3>
+    <h1 style="color:lightseagreen;">Azul Espinosa</h1>
+    <h3>I'm Argentinian-American from Boulder, Colorado, USA</h3>
 
-<p>I enjoy sunset-watching, trying new cooking recipes, snowboarding, re-watching my favorite TV shows, and hanging out with my mom (as seen below).</p>
+    <p>I enjoy sunset-watching, trying new cooking recipes, snowboarding, re-watching my favorite TV shows, and hanging
+        out with my mom (as seen below).</p>
 
-<img> 
-<img src="IMG_4458.jpeg" alt="Photo of Me" width ="550" height="400">
+    <img src="IMG_4458.jpeg" alt="Photo of Me" width="550" height="400">
 
-<h4>Websites I like:</h4>
-<a style="color:hotpink;" href="https://bluecanyontech.com/" target="_blank">Blue Canyon Technologies</a> <br>
+    <h4>Websites I like:</h4>
+    <a style="color:hotpink;" href="https://bluecanyontech.com/" target="_blank">Blue Canyon Technologies</a> <br>
 
-<a style="color:hotpink;" href ="https://www.rhodeskin.com/" target="_blank">Rhode Skincare</a> <br>
+    <a style="color:hotpink;" href="https://www.rhodeskin.com/" target="_blank">Rhode Skincare</a> <br>
 
-<a style="color:hotpink;" href ="https://www.louvre.fr/" target="_blank">Louvre</a> <br>
+    <a style="color:hotpink;" href="https://www.louvre.fr/" target="_blank">Louvre</a> <br>
 
 
 </body>
+
 </html>
