--- a/aboutme2/aboutme2.html
+++ b/aboutme2/aboutme2.html
@@ -19,7 +19,7 @@
     <p>I enjoy sunset-watching, trying new cooking recipes, snowboarding, re-watching my favorite TV shows, and hanging
         out with my mom (as seen below).</p>
 
-    <img src="IMG_4458.jpeg" alt="Photo of Me" width="550" height="400">
+    <img src="IMG_4458.jpeg" alt="Photo of Me" width="550px">
 
     <h4>Websites I like:</h4>
     <ol style = color:deeppink type="i">
