--- a/aboutmeCSS/aboutmeCSS.html
+++ b/aboutmeCSS/aboutmeCSS.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <style>
+    #h3 {
+        color: purple;
+        size: 20px;
+    }
+    .center {
+        text-align: center;
+    }
+ 
     img {
         border: 3.5px solid lightseagreen;
         border-radius: 10px;
@@ -34,8 +42,8 @@
 
 <body>
 
-    <h1>Azul Espinosa</h1>
-    <h3>I'm Argentinian-American from Boulder, Colorado, USA</h3>
+    <h1 class="center">Azul Espinosa</h1>
+    <h3 id = "h3">I'm Argentinian-American from Boulder, Colorado, USA</h3>
 
     <p>I enjoy sunset-watching, trying new cooking recipes, snowboarding, re-watching my favorite TV shows, and hanging
         out with my mom (as seen below).</p>
